refactor(): major changes to factorize methods around plan v2/v4